--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "author": "Masashi Otsuka <masashi1029xxx@gmail.com>",
-  "description": "my sweet honey",
+  "description": "she is so cute!!",
   "dependencies": {
-    "hubot": "^2.19.0",
-    "hubot-diagnostics": "0.0.2",
+    "hubot": "^3.3.2",
+    "hubot-diagnostics": "^1.0.0",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
-    "hubot-help": "^0.2.2",
+    "hubot-help": "^1.0.1",
     "hubot-heroku-keepalive": "^1.0.3",
     "hubot-maps": "0.0.3",
     "hubot-pugme": "^0.1.1",
-    "hubot-redis-brain": "0.0.4",
-    "hubot-rules": "^0.1.2",
+    "hubot-redis-brain": "^1.0.0",
+    "hubot-rules": "^1.0.0",
     "hubot-scripts": "^2.17.2",
-    "hubot-shell": "^1.0.2",
-    "hubot-shipit": "^0.2.1"
+    "hubot-shipit": "^0.2.1",
+    "hubot-slack": "^4.7.1"
   },
   "engines": {
     "node": "0.10.x"
